force-app/main/default/objects/Customer__c/fields/Employed__c.field-meta.xml
<CustomField>
    <fullName>Employed__c</fullName>
    <label>Employed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the customer is employed. Created via SCRUM-23.</description>
    <inlineHelpText>Check this box if the customer is currently employed.</inlineHelpText>
</CustomField>