force-app/main/default/objects/Customer__c/fields/My_Hobby__c.field-meta.xml
<CustomField>
    <fullName>My_Hobby__c</fullName>
    <label>My Hobby</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>