force-app/main/default/objects/Customer__c/fields/My_Salary__c.field-meta.xml
<CustomField>
    <fullName>My_Salary__c</fullName>
    <label>My Salary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>