force-app/main/default/objects/Customer__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <description>Customer's profession category</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Govt Employee</fullName>
            </value>
            <value>
                <fullName>BusinessOwner</fullName>
            </value>
            <value>
                <fullName>HouseWife</fullName>
            </value>
            <value>
                <fullName>Private Employee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>