force-app/main/default/objects/Customer__c/validationRules/My_Salary_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>My_Salary_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>My_Salary__c &lt; 0</errorConditionFormula>
    <errorDisplayField>My_Salary__c</errorDisplayField>
    <errorMessage>My Salary cannot be less than zero.</errorMessage>
</ValidationRule>